[gd_scene load_steps=12 format=3 uid="uid://c8a0wrfmhu40j"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_7gvwu"]
[ext_resource type="Script" uid="uid://bmwb7drpojccx" path="res://tutuplayer.gd" id="1_ek44r"]
[ext_resource type="PackedScene" uid="uid://ccwe7fkmbkkkd" path="res://mattgun.tscn" id="2_ekcj8"]
[ext_resource type="PackedScene" uid="uid://dbgmb2oaydsud" path="res://purplegun.tscn" id="3_ekcj8"]
[ext_resource type="PackedScene" uid="uid://du5i8r7jdycua" path="res://gun.tscn" id="4_bx3gj"]
[ext_resource type="PackedScene" uid="uid://cfrp2irh3h0hh" path="res://virtual_joystick.tscn" id="5_6hb5w"]
[ext_resource type="PackedScene" uid="uid://3qjyxtgnx067" path="res://gun_67.tscn" id="5_mvnsu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ek44r"]
radius = 30.16

[sub_resource type="CircleShape2D" id="CircleShape2D_ekcj8"]
radius = 38.013157

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1uq5"]
bg_color = Color(0.15294118, 0.16862746, 0.1882353, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekcj8"]
bg_color = Color(0.3882353, 0.8, 0.37254903, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HaveSex" type="CharacterBody2D"]
platform_floor_layers = 4294967040
script = ExtResource("1_ek44r")

[node name="mattgun" parent="." instance=ExtResource("2_ekcj8")]

[node name="purplegun" parent="." instance=ExtResource("3_ekcj8")]

[node name="gun" parent="." instance=ExtResource("4_bx3gj")]

[node name="gun67" parent="." instance=ExtResource("5_mvnsu")]

[node name="UI_Layer" type="CanvasLayer" parent="."]
layer = 100

[node name="VirtualJoystick" parent="UI_Layer" instance=ExtResource("5_6hb5w")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 170.0
offset_top = -216.0
offset_right = 210.0
offset_bottom = -176.0
grow_vertical = 0
size_flags_horizontal = 0

[node name="ChoiceMenu" type="Control" parent="UI_Layer"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="Button" parent="UI_Layer/ChoiceMenu"]
layout_mode = 0
offset_left = -145.0
offset_top = 50.0
offset_right = 51.0
offset_bottom = 134.0
text = "Power of Matt Smith"

[node name="Button2" type="Button" parent="UI_Layer/ChoiceMenu"]
layout_mode = 0
offset_left = 222.0
offset_top = 51.0
offset_right = 459.0
offset_bottom = 133.0
text = "The powers of Six Eyes"

[node name="Button3" type="Button" parent="UI_Layer/ChoiceMenu"]
layout_mode = 0
offset_left = 77.0
offset_top = 43.0
offset_right = 196.0
offset_bottom = 135.0
text = "Bro likes mid"

[node name="Button4" type="Button" parent="UI_Layer/ChoiceMenu"]
layout_mode = 0
offset_left = 486.0
offset_top = 38.0
offset_right = 605.0
offset_bottom = 130.0
text = "Get off TikTok"

[node name="SelectionTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HappyBoo" parent="." instance=ExtResource("1_7gvwu")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ek44r")
debug_color = Color(0, 0.9843137, 0.4, 0.41960785)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_ekcj8")
debug_color = Color(0.8449768, 0.3416498, 0.4371678, 0.41960785)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -75.0
offset_top = -133.0
offset_right = 76.0
offset_bottom = -106.0
theme_override_styles/background = SubResource("StyleBoxFlat_g1uq5")
theme_override_styles/fill = SubResource("StyleBoxFlat_ekcj8")
value = 100.0
show_percentage = false
